# existing-probes-dark-ages

./: .gitignore  LICENSE.md  README.md  chains.py  check_recombination_model.py  compare-hyrec-recfast.py  hyrec-install.sh  pyproject.toml  recfast-install.sh  signal_variation.py  test-planck.py  use_ionisation.py
COM_CosmoParams_fullGrid_R3.01/base/BAO_Cooke17/: base_BAO_Cooke17.converge_stat  base_BAO_Cooke17.inputparams  base_BAO_Cooke17.likelihoods  base_BAO_Cooke17.minimum  base_BAO_Cooke17.minimum.inputparams  base_BAO_Cooke17.minimum.theory_cl  base_BAO_Cooke17.paramnames  base_BAO_Cooke17.ranges
COM_CosmoParams_fullGrid_R3.01/base/DES_lenspriors/: base_DES_lenspriors.converge_stat  base_DES_lenspriors.inputparams  base_DES_lenspriors.likelihoods  base_DES_lenspriors.minimum  base_DES_lenspriors.minimum.inputparams  base_DES_lenspriors.minimum.theory_cl  base_DES_lenspriors.paramnames  base_DES_lenspriors.ranges
COM_CosmoParams_fullGrid_R3.01/base/WMAP/: base_WMAP.converge_stat  base_WMAP.inputparams  base_WMAP.likelihoods  base_WMAP.minimum  base_WMAP.minimum.inputparams  base_WMAP.minimum.theory_cl  base_WMAP.paramnames  base_WMAP.ranges  base_WMAP_post_BAO.inputparams  base_WMAP_post_BAO.minimum  base_WMAP_post_BAO.minimum.inputparams  base_WMAP_post_BAO.minimum.theory_cl  base_WMAP_post_BAO.paramnames  base_WMAP_post_BAO.properties.ini  base_WMAP_post_BAO.ranges  (+4 more)
cmrt/: cosmology.py  hyrec.py  utils.py
cmrt/physics/: collisional.py  hyrec.py  temperatures.py
cmrt/utils/: utils.py
darkages/: cosmology.py  hyrec.py  recfast.py  signal.py  utils.py
(+45 files in other folders)
