[project]
name = "darkages"
version = "0.1.0"
description = "Simulation of the cosmological dark ages 21-cm signal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anesthetic>=2.10.4",
    "emcee>=3.1.6",
    "fgivenx>=2.4.2",
    "jax>=0.8.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "scipy>=1.16.2",
]
